# SE4HPC_project_part1

./: CMakeLists.txt  README.md  error_tracker.sh  errors.txt
.github/workflows/: error_tracker.yml
include/: matrix_multiplication.h  matrix_utils.h
src/: matrix_mult.cpp  matrix_utils.cpp
test/: pre_test.cpp  test_correct_matrix_multiplication.cpp  test_matrix_multiplication.cpp
